kubernetes/ingress-controler.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
spec:
  tls:
    - hosts:
        - 
      secretName: testsecret-tls
  rules:
  - host: # DNS api.example.com
    http:
      paths:
      - path: /terms
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
      - path: /definitions
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
